--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -27,7 +27,7 @@
 <!-- The Image goes here-->
   <div class="container">
     <div>
-      <p><img src="./Backend/Madrid.jpeg" class="img-responsive" alt="Sydney" ><br></p>
+      <p><img src="./Backend/DC_a.jpeg" class="img-responsive" alt="Sydney" ><br></p>
     </div>
 
 
