--- a/committee.html
+++ b/committee.html
@@ -93,17 +93,12 @@
 
             <li>TBA</li>
           </ul> -->
-        <h3>Technical Program Committee</h3>
+        <h3>Technical Program Committee</h3>  
           <ul>
             <!-- <li>TBA</li> -->
-            <li><a href="http://www.thucsnet.org/xuke.html" target="_blank">Ke Xu</a> (Tsinghua University, China)</li>
-            <li><a href="http://home.cse.ust.hk/~amas/" target="_blank">Ahmed Sayed</a> (Queen Mary University of London, UK)</li>
-            <li><a href="http://niclane.org/" target="_blank">Nicholas Lane</a> (University of Cambridge, UK)</li>
-            <li><a href="https://ece.hkust.edu.hk/gtyson" target="_blank">Gareth John Tyson</a> (Queen Mary University of London, UK)</li>
-            <li><a href="https://www.surrey.ac.uk/people/nishanth-sastry" target="_blank">Nishanth Sastry</a> (University of Surrey, UK)</li>
-            <li><a href="https://stefanos.cc/" target="_blank"> Stefanos Laskaridis</a> (Brave)</li>
-            <li><a href="https://dirk-kutscher.info/" target="_blank"> Dirk Kutscher</a> (Hong Kong University of Science and Technology (Guangzhou), China)</li>
-            <li><a href="https://dr.ntu.edu.sg/cris/rp/rp02117" target="_blank"> Dmitrii Ustiugov</a> (Nanyang Technological University, Singapore)</li>
+            <li><a href="https://www.ucl.ac.uk/iccs/dr-anna-maria-mandalari" target="_blank">Anna Maria Mandalari</a> (University College London, UK)</li>
+            <li><a href="https://warwick.ac.uk/fac/sci/wmg/about/our-people/profile?wmgid=849" target="_blank">Irene Ng</a> (University of Warwick, UK)</li>
+            <li><a href="https://person.zju.edu.cn/en/zhibowang" target="_blank">Zhibo Wang</a> (Zhejiang University, China)</li>
           </ul>
         
           <h3>Web Chair</h3>
