--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -113,7 +113,7 @@
          </ul>
 
         
-        <p style="font-size:2vw"><span style="color:red"><b>Submission </b></span>: <u><a href="https://fededge23.hotcrp.com" target="_blank">FedEdge2023 HotCRP</a></u></p>
+        <p style="font-size:2vw"><span style="color:red"><b>Submission </b></span>: <u><a href="" target="_blank">FedEdge2024 HotCRP (Not Launched Yet)</a></u></p>
         <h3>Important Dates</h3>
         <ul>
           <li style="font-weight: bold;">Workshop Paper Submissions:  July 15, 2024</li>
