--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -134,12 +134,12 @@
       <div class="row">
         <div class="col-md-12">
           <p align="center">
-            <a href="https://FedEdgeWeb.github.io/index.html">Home</a> |
-            <a href="https://FedEdgeWeb.github.io/committee.html">Committee</a> |
-            <a href="https://FedEdgeWeb.github.io/call_for_papers.html">Call for Papers</a> |
-            <a href="https://FedEdgeWeb.github.io/accepted_papers.html">Accepted Papers</a> |
-            <a href="https://FedEdgeWeb.github.io/camera_ready.html">Camera Ready</a> |
-            <a href="https://FedEdgeWeb.github.io/programme.html">Programme</a> |
+            <a href="https://fededge2024.github.io/index.html">Home</a> |
+            <a href="https://fededge2024.github.io/committee.html">Committee</a> |
+            <a href="https://fededge2024.github.io/call_for_papers.html">Call for Papers</a> |
+            <a href="https://fededge2024.github.io/accepted_papers.html">Accepted Papers</a> |
+            <a href="https://fededge2024.github.io/camera_ready.html">Camera Ready</a> |
+            <a href="https://fededge2024.github.io/programme.html">Programme</a> |
           </p>
           <p align="center"> © FedEdge | Powered by <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>
           </p>
