--- a/committee.html
+++ b/committee.html
@@ -99,6 +99,13 @@
             <li><a href="https://www.ucl.ac.uk/iccs/dr-anna-maria-mandalari" target="_blank">Anna Maria Mandalari</a> (University College London, UK)</li>
             <li><a href="https://warwick.ac.uk/fac/sci/wmg/about/our-people/profile?wmgid=849" target="_blank">Irene Ng</a> (University of Warwick, UK)</li>
             <li><a href="https://person.zju.edu.cn/en/zhibowang" target="_blank">Zhibo Wang</a> (Zhejiang University, China)</li>
+            <li><a href="https://www.cs.tsinghua.edu.cn/csen/info/1309/4352.htm" target="_blank">Ke Xu</a> (Tsinghua University, China)</li>
+            <li><a href="https://csse.szu.edu.cn/staff/cuilz/eng/index.html" target="_blank">Laizhong Cui</a> (Shenzhen University, China)</li>
+          </ul>
+
+          <h3>Public Chair</h3>
+          <ul>
+            <li><a href="https://qiaoxiang.me/" target="_blank">Qiao Xiang</a> (Xiamen University, China)</li>
           </ul>
         
           <h3>Web Chair</h3>
