--- a/committee.html
+++ b/committee.html
@@ -101,9 +101,10 @@
             <li><a href="https://person.zju.edu.cn/en/zhibowang" target="_blank">Zhibo Wang</a> (Zhejiang University, China)</li>
             <li><a href="https://www.cs.tsinghua.edu.cn/csen/info/1309/4352.htm" target="_blank">Ke Xu</a> (Tsinghua University, China)</li>
             <li><a href="https://csse.szu.edu.cn/staff/cuilz/eng/index.html" target="_blank">Laizhong Cui</a> (Shenzhen University, China)</li>
+            <li><a href="http://swarm.cs.pub.ro/~razvan/wiki/" target="_blank">Răzvan Deaconescu</a> (University Politehnica of Bucharest, Romania)</li>
           </ul>
 
-          <h3>Public Chair</h3>
+          <h3>Publicity Chair</h3>
           <ul>
             <li><a href="https://qiaoxiang.me/" target="_blank">Qiao Xiang</a> (Xiamen University, China)</li>
           </ul>
