--- a/committee.html
+++ b/committee.html
@@ -103,6 +103,7 @@
             <li><a href="https://csse.szu.edu.cn/staff/cuilz/eng/index.html" target="_blank">Laizhong Cui</a> (Shenzhen University, China)</li>
             <li><a href="http://swarm.cs.pub.ro/~razvan/wiki/" target="_blank">Răzvan Deaconescu</a> (University Politehnica of Bucharest, Romania)</li>
             <li><a href="https://qiaoxiang.me/" target="_blank">Qiao Xiang</a> (Xiamen University, China)</li>
+            <li><a href="https://sandrasiby.github.io/" target="_blank">Sandra Siby</a> (Imperial College London, UK)</li>
           </ul>
 
           <h3>Publicity Chair</h3>
