--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -57,7 +57,7 @@
 						</div>
 						<div class="panel-body">
               <h5>🎺🎺Submission Link Ready🎺🎺</h5>
-							<h6>TBD, 2024</h6>
+							<h6>June 26, 2024</h6>
 							<h5>Website Online</h5>
 							<h6>April 21, 2024</h6>
 							
@@ -113,7 +113,7 @@
          </ul>
 
         
-        <p style="font-size:2vw"><span style="color:red"><b>Submission </b></span>: <u><a href="" target="_blank">FedEdge2024 HotCRP (Not Launched Yet)</a></u></p>
+        <p style="font-size:2vw"><span style="color:red"><b>Submission </b></span>: <u><a href="https://fededge24.hotcrp.com/" target="_blank">FedEdge2024 HotCRP</a></u></p>
         <h3>Important Dates</h3>
         <ul>
           <li style="font-weight: bold;">Workshop Paper Submissions:  July 15, 2024</li>
