--- a/camera_ready.html
+++ b/camera_ready.html
@@ -57,7 +57,7 @@
 						</div>
 						<div class="panel-body">
               <h5>🎺🎺Submission Link Ready🎺🎺</h5>
-							<h6>TBD, 2024</h6>
+							<h6>June 26, 2024</h6>
 							<h5>Website Online</h5>
 							<h6>April 21, 2024</h6>
 							
