--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -116,7 +116,7 @@
         <p style="font-size:2vw"><span style="color:red"><b>Submission </b></span>: <u><a href="https://fededge24.hotcrp.com/" target="_blank">FedEdge2024 HotCRP</a></u></p>
         <h3>Important Dates</h3>
         <ul>
-          <li style="font-weight: bold;">Workshop Paper Submissions:  July 15, 2024</li>
+          <li style="font-weight: bold;">Workshop Paper Submissions:  July 22, 2024 (Extended!)</li>
           <li style="font-weight: bold;">Notification of acceptance: August 26, 2024</li>
 					<li style="font-weight: bold;">Camera-ready Workshop Papers: September 09, 2024</li>
 					<li style="font-weight: bold;">Workshop Dates:  Nov 18, 2024</li>
