--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         <h3>Important Dates</h3>
         <ul>
-          <li style="font-weight: bold;">Workshop Paper Submissions:  July 15, 2024</li>
+          <li style="font-weight: bold;">Workshop Paper Submissions:  July 22, 2024 (Extended!)</li>
           <li style="font-weight: bold;">Notification of acceptance: August 26, 2024</li>
 					<li style="font-weight: bold;">Camera-ready Workshop Papers: Sept 09, 2024 </li>
 					<li style="font-weight: bold;">Workshop Dates:  November 18, 2024</li>
