--- a/accepted_papers.html
+++ b/accepted_papers.html
@@ -84,10 +84,26 @@
       <div id="content" class="col-xs-12 col-sm-9">
         <h2>Accepted Papers</h2>
 					<ul>
-					<li>
-					<b> Nice papers!</b> 
-					<i> TBD </i>
-					</li>
+            <li>  
+              <b>"NestFL: Enhancing federated learning through nested multi-capacity model pruning in heterogeneous edge computing"</b> -
+              <i>Xiaomiao Zhou, Qingmin Jia, Yujiao Hu, Renchao Xie (Purple Mountain Laboratories)</i>
+              </li>
+            <br>
+            <li>  
+              <b>"Research on Video Content Adaptive Transmission Technology Based on Reinforcement Learning"</b> -
+              <i>Wenming Guo, Ruiqi Jia (Beijing University of Posts and Telecommunications)</i>
+              </li>
+            <br>
+            <li>  
+              <b>"Cost-Aware Federated Learning in Mobile Edge Networks"</b> -
+              <i>Qiangqiang Gu (China Three Gorges University), Kai Jiang (Wuhan University), Liang Zhao (China Three Gorges University), Huan Zhou (Northwestern Polytechnical University), Tingyao Jiang (China Three Gorges University)</i>
+              </li>
+            <br>
+            <li>  
+              <b>"K-Modes Clustering Data Differential Privacy Protection and Random Permutation Publication Method"</b> -
+              <i>Wenjing Jiang, Yilin Chen, Yuqing Han, Yuting Wu, Wei Zhou, Haijuan Wang (Hunan University of Technology and Business)</i>
+              </li>
+            <br>
 					<br>
 					</ul>
 
