Update accpeted papers

--- a/accepted_papers.html
+++ b/accepted_papers.html
@@ -85,6 +85,11 @@
         <h2>Accepted Papers</h2>
 					<ul>
             <li>  
+              <b>Key notes: TBA </b> -
+              <i>TBA</i>
+              </li>
+            <br>
+            <li>  
               <b>"NestFL: Enhancing federated learning through nested multi-capacity model pruning in heterogeneous edge computing"</b> -
               <i>Xiaomiao Zhou, Qingmin Jia, Yujiao Hu, Renchao Xie (Purple Mountain Laboratories)</i>
               </li>
@@ -97,11 +102,6 @@
             <li>  
               <b>"Cost-Aware Federated Learning in Mobile Edge Networks"</b> -
               <i>Qiangqiang Gu (China Three Gorges University), Kai Jiang (Wuhan University), Liang Zhao (China Three Gorges University), Huan Zhou (Northwestern Polytechnical University), Tingyao Jiang (China Three Gorges University)</i>
-              </li>
-            <br>
-            <li>  
-              <b>"K-Modes Clustering Data Differential Privacy Protection and Random Permutation Publication Method"</b> -
-              <i>Wenjing Jiang, Yilin Chen, Yuqing Han, Yuting Wu, Wei Zhou, Haijuan Wang (Hunan University of Technology and Business)</i>
               </li>
             <br>
 					<br>
