--- a/programme.html
+++ b/programme.html
@@ -88,24 +88,27 @@
 					<ul>
 					<br>
 					<li>
-            <b>9:00 - 9:45: Keynote </b> 
+            <b>9:00 - 9:45: Downsizing GenAI: Running LLMs at the edge </b> 
             <br>
-            <i>TBD</i>
+            <i>Stefanos Laskaridis</i>
           </li>
           <br>
           <li>
             <b>9:45 - 10:00: NestFL: Enhancing federated learning through nested multi-capacity model pruning in heterogeneous edge computing</b> 
             <br>
+            <i>Xiaomiao Zhou, Qingmin Jia, Yujiao Hu, Renchao Xie (Purple Mountain Laboratories)</i>  
           </li>
           <br>
           <li>
             <b>10:00 - 10:15: Research on Video Content Adaptive Transmission Technology Based on Reinforcement Learning </b> 
             <br>
+            <i>Wenming Guo, Ruiqi Jia (Beijing University of Posts and Telecommunications)</i>
           </li>
           <br>
           <li>
             <b>10:15 - 10:30: Cost-Aware Federated Learning in Mobile Edge Networks </b> 
             <br>
+            <i>Qiangqiang Gu (China Three Gorges University), Kai Jiang (Wuhan University), Liang Zhao (China Three Gorges University), Huan Zhou (Northwestern Polytechnical University), Tingyao Jiang (China Three Gorges University)</i>
           </li>
 
     </div>
