--- a/programme.html
+++ b/programme.html
@@ -89,7 +89,7 @@
 					<li>
             <b>9:00 - 9:45: Downsizing GenAI: Running LLMs at the edge </b> 
             <br>
-            <i>Stefanos Laskaridis</i>
+            <i>Stefanos Laskaridis (Brave)</i>
           </li>
           <br>
           <li>
